[package]
name = "lb-tracker"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hcloud = "0.21.0"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.96.0", features = ["runtime"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
